# hyena-rs

./: .gitignore  CLI_EXAMPLES.md  Cargo.toml  NOTES.md  README.md  RELEASE_PIN.md  build.rs  checksums-pin.txt  release-pin.txt
.agent/: POLICY.yaml  RULES.md
.github/workflows/: ci.yml
docs/: ORG_CONTEXT.md
mcp_server/: README.md  pyproject.toml  test_mcp_connection.py
mcp_server/hyena_mcp/: __init__.py  server.py
scripts/: build-release.sh  install-hyena-local.sh  snapshot-baseline.sh  tag-baseline-day1.txt
src/: agent_log.rs  cluster.rs  context.rs  derived.rs  ingest.rs  main.rs  policy.rs  raw.rs  scratch.rs  search.rs
tests/: cli_integration.rs
