[package]
name = "hyena"
version = "0.1.0"
edition = "2021"
description = "Hyena CLI: policy-enforcing, file-first agent substrate"
license = "MIT"
repository = "https://github.com/Northroot-Labs/hyena-rs"
readme = "README.md"

[dependencies]
clap = { version = "4", features = ["derive"] }
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
